[package]
name = "dot_tree"
version = "1.0.0"
edition = "2021"
authors = ["Nyeki.py <nyeki@nyeki.dev>"]
description = "Create, query and store binary trees"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25.0"
strum_macros = "0.25.3"
