[tool.poetry]
name = "tree-py"
version = "0.1.0"
description = "A file format to store and query trees."
authors = ["Nyeki <nyeki@nyeki.dev>"]
license = "Unlicense"
readme = "README.md"
packages = [{include = "tree_py"}]

[tool.poetry.dependencies]
python = "^3.11"
bitstring = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
